add register doc
